# voile

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml  query.py  run.py  smoke_test.py
.github/workflows/: ci.yml
.omc/state/team/voile-project-at-d-projects-vo/: config.json  events.jsonl  manifest.json  monitor-snapshot.json
.omc/state/team/voile-project-at-d-projects-vo/dispatch/: requests.json
.omc/state/team/voile-project-at-d-projects-vo/tasks/: task-1.json  task-2.json  task-3.json
.omc/state/team/voile-project-at-d-projects-vo/workers/worker-1/: AGENTS.md  inbox.md
.omc/state/team/voile-project-at-d-projects-vo/workers/worker-2/: AGENTS.md  inbox.md
.omc/state/team/voile-project-at-d-projects-vo/workers/worker-3/: AGENTS.md  inbox.md
core/: __init__.py  health.py  query.py
core/agents/: __init__.py  decision_tracker.py  link_archiver.py  persona_agent.py  sentiment_worker.py  topic_worker.py
core/importers/: qq_import.py  wechat_import.py
core/ingest/: consumer.py
core/obsidian/: __init__.py  writer.py
core/schemas/: __init__.py  message.py
core/storage/: __init__.py  db.py
docs/: ARCHITECTURE_MAP.md  CLEANUP_REPORT_20260418.md  CONTRIBUTING.md  CORE_SCENARIOS.md  DEVELOP_WITH_CLAUDE.md  DEV_SETUP.md  DOCUMENTATION_UPDATE_SUMMARY.md  ECOSYSTEM_WHEELS.md  GITHUB_WHEELS_PRIORITY.md  INTERNAL_DOCS_GUIDE.md  MAINTENANCE_GUIDE.md  MONETIZATION.md  MULTI_AGENT_DESIGN.md  MVP_SCOPE.md  OPERATIONS_MANUAL.md  PAYMENT_HYPOTHESES.md  PRODUCT_POSITIONING.md  PRODUCT_TIERS.md  QQ_DATABASE_DECRYPT.md  TARGET_USERS.md  USER_STORIES.md  VALUE_METRICS.md  VOILE_VS_VAULT_MIND.md  WECHAT_DATABASE_DECRYPT.md
gateway/: Dockerfile  go.mod
gateway/cmd/api/: main.go  main_test.go
gateway/cmd/archiver/: main.go  main_test.go
gateway/cmd/qq/: main.go  main_test.go
gateway/cmd/wechat/: main.go
kernel/: Cargo.toml
kernel/ann/: Cargo.toml  Dockerfile  build.rs
kernel/ann/src/: lib.rs  main.rs
kernel/cleaner/: Cargo.toml  Dockerfile  build.rs
kernel/cleaner/src/: lib.rs  main.rs
kernel/proto/: voile.proto
lagrange/: .gitignore  appsettings.json
plugins/astrbot_plugin_voile/: DEPLOYMENT.md  README.md  __init__.py  metadata.yaml
scripts/: README.md  cleanup_temp_files.sh  decrypt_qq_db.py  decrypt_qq_db.sh
tests/: test_consumer.py  test_decision_tracker.py  test_health.py  test_link_archiver.py  test_obsidian_writer.py  test_persona_agent.py  test_plugin.py  test_qq_import.py  test_query.py  test_schemas.py  test_sentiment_worker.py  test_storage.py  test_topic_worker.py  test_wechat_import.py
voile-assistant/: config.yaml
voile-assistant/prompts/: system.md
