[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "voile"
version = "0.1.0"
description = "Voile, the Magic Library -- chat message analysis and knowledge archiving system"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12",
    "sqlalchemy>=2.0",
    "alembic>=1.18",
    "redis>=7.0",
    "aiohttp>=3.13",
    "grpcio>=1.80",
    "protobuf>=6.30",
    "scikit-learn>=1.4",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.15",
    "mypy>=1.20",
    "antlr4-python3-runtime==4.9.3",
]

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["core/gen/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["core/gen/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
