[workspace]
members = ["cleaner", "ann"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["2233admin"]
license = "MIT"

[workspace.dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
