[package]
name = "voile-ann"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ann"
path = "src/main.rs"

[lib]
name = "voile_ann"
path = "src/lib.rs"

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# HNSW implementation
hnsw_rs = "0.3"
instant-distance = "0.6"

[build-dependencies]
tonic-build = "0.12"
