[package]
name = "voile-cleaner"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cleaner"
path = "src/main.rs"

[lib]
name = "voile_cleaner"
path = "src/lib.rs"

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
regex = "1"
once_cell = "1"

[build-dependencies]
tonic-build = "0.12"
